import "Identifier.proto";

message AnswerChallengeMessage {
	required Identifier identity = 1;

	required string uname_hash = 2;
	required string challenge_response = 3;
}
