import "Identifier.proto";

message AuthAckMessage {
	required Identifier identity = 1;

	required bool authorized = 2;
}
