import "Identifier.proto";

message ConsumeResponseMessage {
	required Identifier identity = 1;
	enum Status {
		OK = 1;
		NOTAUTH = 2;
		UNAVAILABLE = 3;
	}

	required Status status = 2;
}
