import "Identifier.proto";

message GetChallengeMessage {
	required Identifier identity = 1;

	enum Type { CLIENT = 1; SERVER = 2; }
	required Type type = 2;
}
