import "GossipNodeData.proto";
import "Identifier.proto";

message GossipMessage {
	required Identifier id = 1;
	repeated GossipNodeData data = 2;
}

