import "NodeClock.proto";

message GossipNodeData {
	required NodeClock clock = 1;
}
